--- a/client/src/scss/components/switch.scss
+++ b/client/src/scss/components/switch.scss
@@ -1,4 +1,4 @@
-.nav__item-switch-mode {
+.nav__item-mode {
     font-family: 'Montserrat', sans-serif;
     color: $light-grey-switch;
     font-size: 0.7rem;
