--- a/client/src/scss/components/nav.scss
+++ b/client/src/scss/components/nav.scss
@@ -15,13 +15,13 @@
         gap: 39px
         
     }
-    &__link, &__title-auth {
+    &__link, &__item-auth {
         position: relative;
         text-decoration: none;
         @include textSize (700, 30px, normal);
         color: var(--text-color);
     }
-    &__title-auth> span {
+    &__item-auth> span {
         color: $main-orange;
     }
     &__link::before {
@@ -51,10 +51,10 @@
         &__link {
             display: none;
         }
-        &__title-auth {
+        &__item-auth {
             @include textSize (700, 20px, normal);
         }
-        &__title-auth> span {
+        &__item-auth> span {
             color: $main-orange;
         }
     }
